[gd_scene format=3 uid="uid://ce0ttob42nhv0"]

[ext_resource type="Script" uid="uid://cpvsr6xqvnirj" path="res://src/ui/in_game/win_screen.gd" id="1_65oyn"]
[ext_resource type="Texture2D" uid="uid://bchspf21u5uwh" path="res://assets/sprites/ziomek_profilowe.png" id="3_yvci4"]
[ext_resource type="Texture2D" uid="uid://bbi0ym12jj8ok" path="res://src/ui/menus/prettiers/grid.png" id="4_yv8pq"]

[node name="WinScreen" type="Control" unique_id=1320695175]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 9.0
offset_top = 64.0
offset_right = 9.0
offset_bottom = 64.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_65oyn")

[node name="ColorRect" type="ColorRect" parent="." unique_id=512153113]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 282.0
offset_top = 77.0
offset_right = -289.0
offset_bottom = -103.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.95686275, 0.8901961, 0.8235294, 1)

[node name="Winner" type="Label" parent="." unique_id=1944757000]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -183.0
offset_top = -167.0
offset_right = 180.0
offset_bottom = -58.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 111
text = "WINNER"

[node name="WinnerPic" type="TextureRect" parent="." unique_id=956575932]
layout_mode = 0
offset_left = 512.0
offset_top = 295.0
offset_right = 619.0
offset_bottom = 399.0
texture = ExtResource("3_yvci4")

[node name="MenuBackground" type="TextureRect" parent="." unique_id=1056284674]
modulate = Color(0.8627451, 0.8627451, 0.8627451, 0.31764707)
layout_mode = 0
offset_left = 282.0
offset_top = 76.0
offset_right = 1239.0665
offset_bottom = 853.20404
scale = Vector2(0.60601854, 0.6060185)
texture = ExtResource("4_yv8pq")

[node name="HBoxContainer" type="HBoxContainer" parent="." unique_id=368875757]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -224.0
offset_top = 107.0
offset_right = 224.0
offset_bottom = 149.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 72

[node name="NewGame" type="Button" parent="HBoxContainer" unique_id=362874251]
layout_mode = 2
size_flags_horizontal = 4
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_constants/h_separation = 2
theme_override_font_sizes/font_size = 21
text = "PLAY_AGAIN"
flat = true

[node name="BackToMenu" type="Button" parent="HBoxContainer" unique_id=39924813]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_constants/h_separation = 2
theme_override_font_sizes/font_size = 21
text = "RETURN_TO_MENU"
flat = true

[connection signal="pressed" from="HBoxContainer/NewGame" to="." method="_on_new_game_pressed"]
[connection signal="pressed" from="HBoxContainer/BackToMenu" to="." method="_on_back_to_menu_pressed"]
